changed protocal to https

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script>
 
     function myFunction() {
-        $.getJSON('http://anyorigin.com/go?url=green2day.com&callback=?', function(data) {
+        $.getJSON('https://anyorigin.com/go?url=green2day.com&callback=?', function(data) {
 	        $('#output').html(data.contents);
         });
     };
