added jquery mobile

--- a/index.html
+++ b/index.html
@@ -10,19 +10,115 @@
     src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
+    <style>
+        p {
+            display: inline;
+        }
+
+        .leafImg {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        h1 {
+            text-align: center;
+            color: #218838;
+        }
+
+        h3 {
+            text-align: center;
+        }
+
+        /* Hide the number input */
+        .full-width-slider input {
+            display: none;
+        }
+        .full-width-slider .ui-slider-track {
+            margin-left: 15px;
+        }
+
+        .button {
+            text-align: center;
+        }
+
+        #output {
+            color: #218838;
+        }
+
+        .footer {
+            text-align: center;
+        }
+
+    </style>
   
 
 </head>
 <body onload="myFunction()">
-    <div id="output"></div>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div style="overflow:hidden;" data-role="header">
+                    <h1>Green2day</h1>
+                        <a class="ui-btn-right" href="#" data-icon="gear">Options</a>
+                </div><!-- /header -->
+                <br>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <img class="leafImg" src="greenLeaf.png" height="50px">
+                <br>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h3>Members are saving <span id="output"></span> of CO2 per year</h3>
+                <br>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <a href="https://www.accuweather.com/en/us/denver-co/80203/current-weather/347810" class="aw-widget-legal">
+                <!--
+                By accessing and/or using this code snippet, you agree to AccuWeather’s terms and conditions (in English) which can be found at https://www.accuweather.com/en/free-weather-widgets/terms and AccuWeather’s Privacy Statement (in English) which can be found at https://www.accuweather.com/en/privacy.
+                -->
+                </a><div id="awtd1539297366577" class="aw-widget-36hour"  data-locationkey="" data-unit="f" data-language="en-us" data-useip="true" data-uid="awtd1539297366577" data-editlocation="true"></div><script type="text/javascript" src="https://oap.accuweather.com/launch.js"></script>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="button">
+                    <button class="btn btn-success">Log In</button>
+                </div>
+                <br>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h6 class="footer">Daniel Button &copy 2018</h6>
+            </div>
+        </div>
+    </div>
 </body>
 <script>
 
     function myFunction() {
-        $.getJSON('https://anyorigin.com/go?url=green2day.com&callback=?', function(data) {
-	        $('#output').html(data.contents);
+        $.getJSON('https://allorigins.me/get?url=' + encodeURIComponent('https://green2day.com') + '&callback=?', function(data){
+            $('#output').append(data.contents);
+            var item1 = $( "p" )[ 4 ];
+            $('#output').find(item1).attr( "style", "" );
+            $('#output').html(item1);
         });
     };
+
 </script>
 </html>
